# mmgdynamics

./: .gitignore  README.md  calibrated_vessels.py  crossflow.py  dynamics.py  example.py  setup.cfg  wpd_datasets.csv
.github/workflows/: release-on-keyword.yml
src/mmgdynamics/: __init__.py  calibrated_vessels.py  crossflow.py  dynamics.py  example.py  maneuvers.py  structs.py
