[metadata]
name = mmgdynamics
version = 1.0.7
author = Niklas Paulig
author_email = niklas.paulig@tu-dresden.de
description = MMG standard model for ship maneuvering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikpau/mmgdynamics
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[project]
install_requires =
    numpy >= 1.19,
    scipy,
    matplotlib >= 3.5.3,

[options.packages.find]
where=src